syntax = "proto3";

package transervice;

// Cmd to generate pb.go files: protoc --go_out=. proto/* --go-grpc_out=.
option go_package = ".;pb"; // Generate pb.go files in this directory

import "google/api/annotations.proto";

service TransactionManager{
    rpc TransactionUp (NewTransaction) returns (TransactionResponse) {
        option (google.api.http) = {
            post: "/transactions/up"
            body: "*"
        };
    }
    
    rpc TransactionDown (NewTransaction) returns (TransactionResponse) {
        option (google.api.http) = {
            post: "/transactions/down"
            body: "*"
        };
    }

}

message NewTransaction{
    string Token = 1;
    int64 Value = 2;
} 

message TransactionResponse{
    int64 Balance = 1;
}